apps/security/base/external-routing/sqs-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cc-route-sqs
spec:
  hosts:
    - "hosts"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: sqs.us-west-2.amazonaws.com
            port:
               number: 80
