apps/security/base/external-routing/virtualservice-cntu.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cc-route-cntu-external
spec:
  hosts:
    - "hosts"
  gateways:
    - gateway
  http:
    - name: "Get user details"
      route:
        - destination:
            host: cntu
      match:
      - uri:
          prefix: "/cntu/users/"
        method:
          exact: GET  
      rewrite:
        uri: "/users/"
